--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,31 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+p {
+  font-family: "Open Sans", sans-serif;
+}
+
+.watermelon {
+  background-color: #e86033;
+}
+
+.watermelon > h2 {
+  font-family: "Rammetto One", sans-serif;
+}
+
+.starfruit {
+  background-color: #fbd25e;
+}
+
+.starfruit > h2 {
+  font-family: "Gravitas One", sans-serif;
+}
+
+.persimmon {
+  background-color: #e97065;
+}
+
+.persimmon > h2 {
+  font-family: "Comfortaa", serif;
+}
