--- a/css/main.css
+++ b/css/main.css
@@ -16,19 +16,23 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+}
+
 p {
   font-family: "Open Sans", sans-serif;
 }
 
-.watermelon {
-  background-color: #e86033;
+.watermelon-color {
+  background-color: #e97065;
 }
 
 .watermelon > h2 {
   font-family: "Rammetto One", sans-serif;
 }
 
-.starfruit {
+.starfruit-color {
   background-color: #fbd25e;
 }
 
@@ -36,8 +40,8 @@ p {
   font-family: "Gravitas One", sans-serif;
 }
 
-.persimmon {
-  background-color: #e97065;
+.persimmon-color {
+  background-color: #e86033;
 }
 
 .persimmon > h2 {
